martin-core/src/resources/sprites/snapshots/martin_core__resources__sprites__tests__all_2.snap
---
source: martin-core/src/resources/sprites/mod.rs
expression: png
extension: png
snapshot_kind: binary
---
