martin-core/src/resources/sprites/snapshots/martin_core__resources__sprites__tests__src1_2.json.snap
---
source: martin-core/src/resources/sprites/mod.rs
expression: sprites.get_index()
---
{
  "another_bicycle": {
    "height": 30,
    "pixelRatio": 2,
    "width": 30,
    "x": 40,
    "y": 32
  },
  "bear": {
    "height": 32,
    "pixelRatio": 2,
    "width": 32,
    "x": 40,
    "y": 0
  },
  "sub/circle": {
    "height": 40,
    "pixelRatio": 2,
    "width": 40,
    "x": 0,
    "y": 0
  }
}
