martin-core/src/resources/sprites/snapshots/martin_core__resources__sprites__tests__src2_1.json.snap
---
source: martin-core/src/resources/sprites/mod.rs
expression: sprites.get_index()
---
{
  "bicycle": {
    "height": 15,
    "pixelRatio": 1,
    "width": 15,
    "x": 0,
    "y": 0
  }
}
