martin-core/src/resources/sprites/snapshots/martin_core__resources__sprites__tests__src2_2.json.snap
---
source: martin-core/src/resources/sprites/mod.rs
expression: sprites.get_index()
---
{
  "bicycle": {
    "height": 30,
    "pixelRatio": 2,
    "width": 30,
    "x": 0,
    "y": 0
  }
}
